--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "js": "^0.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.10",
+    "multer": "^1.4.4",
     "node": "^17.7.2",
     "nodemon": "^2.0.15"
   }
